--- a/ToDo/ToDo.csproj
+++ b/ToDo/ToDo.csproj
@@ -204,12 +204,13 @@
     <Compile Include="Core\ViewModels\OAuthViewModels\VerifyCodeViewModel.cs" />
     <Compile Include="Core\ViewModels\OAuthViewModels\VerifyPhoneNumberViewModel.cs" />
     <Compile Include="Core\ViewModels\ToDoFormViewModel.cs" />
+    <Compile Include="Core\ViewModels\ToDoViewModel.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Persistence\Migrations\201905231743479_InitialMigration.cs" />
-    <Compile Include="Persistence\Migrations\201905231743479_InitialMigration.Designer.cs">
-      <DependentUpon>201905231743479_InitialMigration.cs</DependentUpon>
+    <Compile Include="Persistence\Migrations\201905240741592_Test.cs" />
+    <Compile Include="Persistence\Migrations\201905240741592_Test.Designer.cs">
+      <DependentUpon>201905240741592_Test.cs</DependentUpon>
     </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\ApplicationDbContext.cs" />
@@ -261,7 +262,6 @@
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Manage\AddPhoneNumber.cshtml" />
     <Content Include="Views\Manage\ChangePassword.cshtml" />
     <Content Include="Views\Manage\Index.cshtml" />
@@ -275,6 +275,7 @@
     <Content Include="Views\ToDo\ToDoForm.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -293,8 +294,8 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Persistence\Migrations\201905231743479_InitialMigration.resx">
-      <DependentUpon>201905231743479_InitialMigration.cs</DependentUpon>
+    <EmbeddedResource Include="Persistence\Migrations\201905240741592_Test.resx">
+      <DependentUpon>201905240741592_Test.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
