Modularized JS files

--- a/ToDo/ToDo.csproj
+++ b/ToDo/ToDo.csproj
@@ -229,6 +229,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\app\api\api.js" />
+    <Content Include="Scripts\app\controller\toDoIndex.js" />
+    <Content Include="Scripts\app\homeIndex.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="appSettings.config" />
