--- a/ToDo/ToDo.csproj
+++ b/ToDo/ToDo.csproj
@@ -223,6 +223,10 @@
     <Compile Include="Persistence\Migrations\201905270640011_UpdatedEmailCheck.Designer.cs">
       <DependentUpon>201905270640011_UpdatedEmailCheck.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201905270814556_AddedUserIdToLists.cs" />
+    <Compile Include="Persistence\Migrations\201905270814556_AddedUserIdToLists.Designer.cs">
+      <DependentUpon>201905270814556_AddedUserIdToLists.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -311,6 +315,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201905270640011_UpdatedEmailCheck.resx">
       <DependentUpon>201905270640011_UpdatedEmailCheck.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201905270814556_AddedUserIdToLists.resx">
+      <DependentUpon>201905270814556_AddedUserIdToLists.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
